# PredictingHousePrices

./: pyproject.toml
src/: pyproject.toml  runner.py
src/config/: .env  db.py  logger.py  model.py
src/db/: db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
